Added my shit to the thingy

--- a/sites.html
+++ b/sites.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="styles.css" rel="stylesheet">
-        <title>Student Hub</title>
+        <title>Sites - Student Hub</title>
     </head>
     <body>
         <div id="navbar">
@@ -17,23 +17,15 @@
                 <a href='/studenthub/about.html' class="navbuttons">Privacy/About</a>
             </div>
         </div>
-        <h1 class="bodyheader">Student Hub</h1>
+        <h1 class="bodyheader">Available BHS-Offered Sites</h1>
         <p class="bodydescriptor">
-            Welcome to the Student Hub! 
-            This is your go-to place for 
-            all resources, information, 
-            and support you need as a 
-            student (or parent!) at BHS. 
-            Explore the various sections 
-            to find study materials, 
-            campus news, event updates, 
-            and much more.
+            The Student Hub offers a variety of formal 
+            and informal sites to support students in 
+            their academic journey. This number 
+            is constantly being updated and improved, 
+            so be sure to check back often for new 
+            resources! All credit to their respective developers.
         </p>
-        <h2 class="bodysecondheader">Recent Announcements</h2>
-        <div class="announcementsbox">
-            
-        </div>
-        <h2 class="bodysecondheader">Offered Websites</h2>
         <div class="cardorganizer">
             <a href="https://barcelonahighschool.com" target="_blank">
                 <div class="card">
